--- a/module-01/index.html
+++ b/module-01/index.html
@@ -14,25 +14,17 @@
     <header>
         <nav class="navi-menu">
             <ul>
-                <li>
-                    <a href="#"">lifestile</a>
-                </li>
-                <li>
-                    <a href="#">photodiary</a>
-                </li>
-                <li>
-                    <a href="#">music</a>
-                </li>
-                <li>
-                    <a href="#">travel</a>
-                </li>
+                <li><a href="#">lifestile</a></li>
+                <li><a href="#">photodiary</a></li>
+                <li><a href="#">music</a></li>
+                <li><a href="#">travel</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="lifestyle">
 
-        <img src="img/img1.jpg" alt="img lifestyle">
+        <img width="450" height="300" src="img/img1.jpg" alt="img lifestyle">
         <p>lifestyle</p>
         <h2>More than just a music festival</h2>
         <p>Lorem ipsum elementum quisque duis rutrum ligula odio diam pellentesque, diam nam vivamus
@@ -41,7 +33,7 @@
             Commodo ultricies malesuada nec bibendum nec tempus leo quam justo, sodales. In nam nulla at cursus sapien,
             nibh magna leo diam, risus pharetra porta, orci eget mattis, pellentesque tempus urna lectus, donec magna.
         </p>
-        <img src="img/img2.jpg" alt="img woman">
+        <img width="450" height="300" src="img/img2.jpg" alt="img woman">
         <p>lifestyle</p>
         <h2>Life tastes better whith coffee</h2>
         <p>Lorem ipsum elementum quisque duis rutrum ligula odio diam pellentesque, diam nam vivamus
@@ -58,7 +50,7 @@
 
     <section class="photodiary">
 
-        <img src="img/img3.jpg" alt="img bridge">
+        <img width="450" height="300" src="img/img3.jpg" alt="img bridge">
         <p>photodiary</p>
         <h2>American dream</h2>
         <p>Lorem ipsum elementum quisque duis rutrum ligula odio diam pellentesque, diam nam vivamus
@@ -74,10 +66,12 @@
 
 
 
-        <img src="img/img4.jpg" alt="img man">
+        <img width="450" height="300" src="img/img4.jpg" alt="img man">
         <p>photodiary</p>
         <h2>A day exploring the Alps</h2>
-        <p>Lorem ipsum elementum quisque duis rutrum ligula odio diam pellentesque, diam nam vivamus
+
+
+        <p> Lorem ipsum elementum quisque duis rutrum ligula odio diam pellentesque, diam nam vivamus
             bibendum&nbsp;&mdash; nam morbi ornare rutrum orci, cursus. Diam duis, quam ultricies, massa
             curabitur,
             sapien vitae, magna eget vitae ipsum vulputate tellus sed nibh sed justo vulputate&nbsp;&mdash;
@@ -88,8 +82,17 @@
             donec magna.
         </p>
 
+
         <button>Load more</button>
     </section>
+    <div>
+
+        <p>Kavun V.P. <br>27 group</p>
+        <a title="Write me" target="blank"
+            href="https://mail.google.com/mail/u/0/?tab=wm#inbox?compose=CllgCJlKnTMHzBrLllrdxvJGPDTzlqLqZwVVSrlmRVHcgkbXstgnljFFxrtLtcDDDlVHnnkCwQB">Kavunv@gmail.com</a>
+    </div>
 </body>
+
+
 
 </html>
