Delivered main, combined everything into a section and divided by article.

--- a/module-01/index.html
+++ b/module-01/index.html
@@ -9,7 +9,6 @@
 
 </head>
 
-
 <body>
     <header>
         <nav class="navi-menu">
@@ -21,78 +20,84 @@
             </ul>
         </nav>
     </header>
+    <main>
 
-    <section class="lifestyle">
+        <section>
 
-        <img width="450" height="300" src="img/img1.jpg" alt="img lifestyle">
-        <p>lifestyle</p>
-        <h2>More than just a music festival</h2>
-        <p>Lorem ipsum elementum quisque duis rutrum ligula odio diam pellentesque, diam nam vivamus
-            bibendum&nbsp;&mdash; nam morbi ornare rutrum orci, cursus. Diam duis, quam ultricies, massa curabitur,
-            sapien vitae, magna eget vitae ipsum vulputate tellus sed nibh sed justo vulputate&nbsp;&mdash; ut sapien.
-            Commodo ultricies malesuada nec bibendum nec tempus leo quam justo, sodales. In nam nulla at cursus sapien,
-            nibh magna leo diam, risus pharetra porta, orci eget mattis, pellentesque tempus urna lectus, donec magna.
-        </p>
-        <img width="450" height="300" src="img/img2.jpg" alt="img woman">
-        <p>lifestyle</p>
-        <h2>Life tastes better whith coffee</h2>
-        <p>Lorem ipsum elementum quisque duis rutrum ligula odio diam pellentesque, diam nam vivamus
-            bibendum&nbsp;&mdash; nam morbi ornare rutrum orci, cursus. Diam duis, quam ultricies, massa curabitur,
-            sapien vitae, magna eget vitae ipsum vulputate tellus sed nibh sed justo vulputate&nbsp;&mdash; ut
-            sapien.
-            Commodo ultricies malesuada nec bibendum nec tempus leo quam justo, sodales. In nam nulla at cursus
-            sapien,
-            nibh magna leo diam, risus pharetra porta, orci eget mattis, pellentesque tempus urna lectus, donec
-            magna.
-        </p>
-    </section>
+            <article>
+                <img width="450" height="300" src="img/img1.jpg" alt="img lifestyle">
+                <p>lifestyle</p>
+                <h2>More than just a music festival</h2>
+                <p>Lorem ipsum elementum quisque duis rutrum ligula odio diam pellentesque, diam nam vivamus
+                    bibendum&nbsp;&mdash; nam morbi ornare rutrum orci, cursus. Diam duis, quam ultricies, massa
+                    curabitur,
+                    sapien vitae, magna eget vitae ipsum vulputate tellus sed nibh sed justo vulputate&nbsp;&mdash; ut
+                    sapien.
+                    Commodo ultricies malesuada nec bibendum nec tempus leo quam justo, sodales. In nam nulla at cursus
+                    sapien,
+                    nibh magna leo diam, risus pharetra porta, orci eget mattis, pellentesque tempus urna lectus, donec
+                    magna.
+                </p>
+            </article>
+            <article>
+                <img width="450" height="300" src="img/img2.jpg" alt="img woman">
+                <p>lifestyle</p>
+                <h2>Life tastes better whith coffee</h2>
+                <p>Lorem ipsum elementum quisque duis rutrum ligula odio diam pellentesque, diam nam vivamus
+                    bibendum&nbsp;&mdash; nam morbi ornare rutrum orci, cursus. Diam duis, quam ultricies, massa
+                    curabitur,
+                    sapien vitae, magna eget vitae ipsum vulputate tellus sed nibh sed justo vulputate&nbsp;&mdash; ut
+                    sapien.
+                    Commodo ultricies malesuada nec bibendum nec tempus leo quam justo, sodales. In nam nulla at cursus
+                    sapien,
+                    nibh magna leo diam, risus pharetra porta, orci eget mattis, pellentesque tempus urna lectus, donec
+                    magna.
+                </p>
+            </article>
+            <article>
+                <img width="450" height="300" src="img/img3.jpg" alt="img bridge">
+                <p>photodiary</p>
+                <h2>American dream</h2>
+                <p>Lorem ipsum elementum quisque duis rutrum ligula odio diam pellentesque, diam nam vivamus
+                    bibendum&nbsp;&mdash; nam morbi ornare rutrum orci, cursus. Diam duis, quam ultricies, massa
+                    curabitur,
+                    sapien vitae, magna eget vitae ipsum vulputate tellus sed nibh sed justo vulputate&nbsp;&mdash; ut
+                    sapien.
+                    Commodo ultricies malesuada nec bibendum nec tempus leo quam justo, sodales. In nam nulla at cursus
+                    sapien,
+                    nibh magna leo diam, risus pharetra porta, orci eget mattis, pellentesque tempus urna lectus, donec
+                    magna.
+                </p>
+            </article>    
+             <article>
+                <img width="450" height="300" src="img/img4.jpg" alt="img man">
+                <p>photodiary</p>
+                <h2>A day exploring the Alps</h2>
+                <p> Lorem ipsum elementum quisque duis rutrum ligula odio diam pellentesque, diam nam vivamus
+                    bibendum&nbsp;&mdash; nam morbi ornare rutrum orci, cursus. Diam duis, quam ultricies, massa
+                    curabitur,
+                    sapien vitae, magna eget vitae ipsum vulputate tellus sed nibh sed justo vulputate&nbsp;&mdash;
+                    ut sapien.
+                    Commodo ultricies malesuada nec bibendum nec tempus leo quam justo, sodales. In nam nulla at
+                    cursus sapien,
+                    nibh magna leo diam, risus pharetra porta, orci eget mattis, pellentesque tempus urna lectus,
+                    donec magna.
+                </p>
+            </article>
 
+            <button>Load more</button>
+        </section>
+    </main>
 
-    <section class="photodiary">
+    <footer>
 
-        <img width="450" height="300" src="img/img3.jpg" alt="img bridge">
-        <p>photodiary</p>
-        <h2>American dream</h2>
-        <p>Lorem ipsum elementum quisque duis rutrum ligula odio diam pellentesque, diam nam vivamus
-            bibendum&nbsp;&mdash; nam morbi ornare rutrum orci, cursus. Diam duis, quam ultricies, massa
-            curabitur,
-            sapien vitae, magna eget vitae ipsum vulputate tellus sed nibh sed justo vulputate&nbsp;&mdash; ut
-            sapien.
-            Commodo ultricies malesuada nec bibendum nec tempus leo quam justo, sodales. In nam nulla at cursus
-            sapien,
-            nibh magna leo diam, risus pharetra porta, orci eget mattis, pellentesque tempus urna lectus, donec
-            magna.
-        </p>
+        <div>
+            <p>Kavun V.P.<br>27 group</p>
+            <a title="Write me" target="blank" href="mailto:kavunv@gmail.com">Kavunv@gmail.com</a>
+        </div>
+    </footer>
 
-
-
-        <img width="450" height="300" src="img/img4.jpg" alt="img man">
-        <p>photodiary</p>
-        <h2>A day exploring the Alps</h2>
-
-
-        <p> Lorem ipsum elementum quisque duis rutrum ligula odio diam pellentesque, diam nam vivamus
-            bibendum&nbsp;&mdash; nam morbi ornare rutrum orci, cursus. Diam duis, quam ultricies, massa
-            curabitur,
-            sapien vitae, magna eget vitae ipsum vulputate tellus sed nibh sed justo vulputate&nbsp;&mdash;
-            ut sapien.
-            Commodo ultricies malesuada nec bibendum nec tempus leo quam justo, sodales. In nam nulla at
-            cursus sapien,
-            nibh magna leo diam, risus pharetra porta, orci eget mattis, pellentesque tempus urna lectus,
-            donec magna.
-        </p>
-
-
-        <button>Load more</button>
-    </section>
-    <div>
-
-        <p>Kavun V.P. <br>27 group</p>
-        <a title="Write me" target="blank"
-            href="https://mail.google.com/mail/u/0/?tab=wm#inbox?compose=CllgCJlKnTMHzBrLllrdxvJGPDTzlqLqZwVVSrlmRVHcgkbXstgnljFFxrtLtcDDDlVHnnkCwQB">Kavunv@gmail.com</a>
-    </div>
 </body>
-
 
 
 </html>
