--- a/module-03/index.html
+++ b/module-03/index.html
@@ -25,12 +25,12 @@
                 </nav>
             </header>
 
-            <main class="container">
+            <main>
                 <!-- section conntent -->
 
                 <section class="row">
                     <article class="row-content">
-                        <img src="img/img1.jpg" alt="img woman">
+                        <img src="img/img1.jpg"  width="420" height="279" alt="img woman">
                         <p class="ubuntu">lifestyle</p>
                         <h2 class="heading">More than just a music festival</h2>
                         <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores saepe quos
@@ -39,7 +39,7 @@
                         </p>
                     </article>
                     <article class="row-content">
-                        <img src="img/img2.jpg" alt="img coffee">
+                        <img src="img/img2.jpg"  width="420" height="279" alt="img coffee">
                         <p class="ubuntu">lifestyle</p>
                         <h2 class="heading">Life tastes better whith coffee</h2>
                         <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores saepe quos
@@ -50,7 +50,7 @@
 
                     </article>
                     <article class="row-content">
-                        <img src="img/img3.jpg" alt="img bridge">
+                        <img src="img/img3.jpg" width="420" height="279" alt="img bridge">
                         <p class="ubuntu">photodiary</p>
                         <h2 class="heading">American dream</h2>
                         <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores saepe quos
@@ -59,7 +59,7 @@
                         </p>
                     </article>
                     <article class="row-content">
-                        <img src="img/img4.jpg" alt="img man">
+                        <img src="img/img4.jpg"  width="420" height="279" alt="img man">
                         <p class="ubuntu">photodiary</p>
                         <h2 class="heading">A day exploring the Alps</h2>
                         <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores saepe quos
@@ -69,7 +69,7 @@
 
                     </article>
                     <article class="row-content">
-                        <img src="img/img5.jpg" alt="img man">
+                        <img src="img/img5.jpg"  width="420" height="279" alt="img man">
                         <p class="ubuntu">lifestyle</p>
                         <h2 class="heading">Top 10 song for running</h2>
                         <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores saepe quos
@@ -79,7 +79,7 @@
 
                     </article>
                     <article class="row-content">
-                        <img src="img/img6.jpg" alt="img man">
+                        <img src="img/img6.jpg"  width="420" height="279" alt="img man">
                         <p class="ubuntu">lifestyle</p>
                         <h2 class="heading">Cold winter daysg</h2>
                         <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores saepe quos
@@ -89,13 +89,9 @@
 
                     </article>
 
-                </section>
-
-
-                <div class="dws">
                     <button class="button">Load more</button>
-                </div>
-
+                </section>                
+                
             </main>
 
         <footer>
