--- a/module-04/index.html
+++ b/module-04/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
 
-        <header>
+        <header class="clearfix">
             
             <a href="#" class="site-logo">mart</a>
             
