--- a/module-06/index.html
+++ b/module-06/index.html
@@ -35,7 +35,7 @@
             <h2 class="text-h3">We work with <span class="text-h2"><br>Amazing Services</span></h2>
 
             <ul class="services-list">
-                <li class="services-item alarm">
+                <li class="services-item icon-alarm">
 
                     <div class="services">
                         <h2 class="services-titles">Photography</h2>
@@ -43,7 +43,7 @@
                             tempor.</p>
                     </div>
                 </li>
-                <li class="services-item line-graph">
+                <li class="services-item icon-line-graph">
 
                     <div class="services">
                         <h2 class="services-titles">Web Design</h2>
@@ -51,7 +51,7 @@
                             tempor.</p>
                     </div>
                 </li>
-                <li class="services-item ok">
+                <li class="services-item icon-ok">
 
                     <div class="services">
                         <h2 class="services-titles">Creativity</h2>
@@ -59,7 +59,7 @@
                             tempor.</p>
                         </div>
                 </li>
-                <li class="services-item book">
+                <li class="services-item icon-book">
 
                     <div class="services">
                         <h2 class="services-titles">seo</h2>
@@ -67,7 +67,7 @@
                             tempor.</p>
                     </div>
                 </li>
-                <li class="services-item home">
+                <li class="services-item icon-home">
 
                     <div class="services">
                         <h2 class="services-titles">Css/Html</h2>
@@ -75,7 +75,7 @@
                             tempor.</p>
                     </div>
                 </li>
-                <li class="services-item image">
+                <li class="services-item icon-image">
 
                     <div class="services">
                         <h2 class="services-titles">digital</h2>
