fix path to pictures

--- a/module-08/index.html
+++ b/module-08/index.html
@@ -45,27 +45,27 @@
 
     <ul class="team-list">
       <li class="team-item icon-tv">
-        <img src="/img/Layer_6.png" alt="" class="team-img">
+        <img src="img/Layer_6.png" alt="" class="team-img">
         <p class="name">Bradley Hunter</p>
         <p class="us">Based in Chicago. I love playing tennis and loud music.</p>
       </li>
 
       <li class="team-item icon-flask">
-        <img src="/img/Layer_7.png" alt="" class="team-img">
+        <img src="img/Layer_7.png" alt="" class="team-img">
         <p class="name">Heather Walker</p>
         <p class="us">I'm a happy person that loves cats and climbing on mountains.
           </p>
       </li>
 
       <li class="team-item icon-cofe">
-        <img src="/img/Layer_8.png" alt="" class="team-img">
+        <img src="img/Layer_8.png" alt="" class="team-img">
         <p class="name">Lucas Marsha</p>
         <p class="us">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.
           </p>
       </li>
 
       <li class="team-item icon-airplane">
-        <img src="/img/Layer_10.png" alt="" class="team-img">
+        <img src="img/Layer_10.png" alt="" class="team-img">
         <p class="name">Bradley Hunter</p>
         <p class="us">Based in Chicago. I love playing tennis and loud music.</p>
       </li>
