--- a/module-08/index.html
+++ b/module-08/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <header class="container">
+  <header>
     <div class="header-site container">
 
       <div class="site-logo">
@@ -20,11 +20,11 @@
 
       <nav class="site-menu">
 
-        <ul class="menu-list">
-          <li class="menu-item"><a href="#" class="menu-link">Log in</a></li>
-          <li class="menu-item"><a href="#" class="menu-link">Sign up</a></li>
+        <div class="menu-list">
+          <button class="menu-btn btn-log-in">Log in</button>
+          <button class="menu-btn btn-sing-up">Sign up</button>
         
-        </ul>
+        </div>
       </nav>
     </div>
 
