add outline btn

--- a/module-08/index.html
+++ b/module-08/index.html
@@ -2,80 +2,81 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="fonts/fonts.css">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Module-08</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <link rel="stylesheet" href="fonts/fonts.css">
+   <link rel="stylesheet" href="css/style.css">
+   <title>Module-08</title>
 </head>
 
 <body>
-  <header>
-    <div class="header-site container">
+   <header>
+      <div class="header-site container">
 
-      <div class="site-logo">
-        <a class="logo" href="#">urlaubsgluck</a>
+         <div class="site-logo">
+            <a class="logo" href="#">urlaubsgluck</a>
+         </div>
+
+         <nav class="site-menu">
+
+            <div class="menu-list">
+               <button class="menu-btn btn-log-in">Log in</button>
+               <button class="menu-btn btn-sing-up">Sign up</button>
+
+            </div>
+         </nav>
       </div>
 
-      <nav class="site-menu">
+      <div class="title-section container">
 
-        <div class="menu-list">
-          <button class="menu-btn btn-log-in">Log in</button>
-          <button class="menu-btn btn-sing-up">Sign up</button>
-        
-        </div>
-      </nav>
-    </div>
+         <h1 class="site-title">Share your <br>
+            holiday dreams</h1>
+         <p class="site-text-title">And find the perfect partner<br>to fullfill it</p>
+         <button class="header-btn btn">Find your holiday partner</button>
 
-    <div class="title-section container">
+      </div>
+   </header>
 
-      <h1 class="site-title">Share your <br>
-        holiday dreams</h1>
-      <p class="site-text-title">And find the perfect partner<br>to fullfill it</p>
-      <button class="header-btn btn">Find your holiday partner</button>
+   <main>
+      <section class="team container">
 
-    </div>
-  </header>
+         <h2 class="title-team">Meet a partner for your best holiday</h2>
 
-<main>
-  <section class="team container">
+         <ul class="team-list">
+            <li class="team-item icon-tv">
+               <img src="img/Layer_6.png" alt="" class="team-img">
+               <p class="name">Bradley Hunter</p>
+               <p class="us">Based in Chicago. I love playing tennis and loud music.</p>
+            </li>
 
-    <h2 class="title-team">Meet a partner for your best holiday</h2>
+            <li class="team-item icon-flask">
+               <img src="img/Layer_7.png" alt="" class="team-img">
+               <p class="name">Heather Walker</p>
+               <p class="us">I'm a happy person that loves cats and climbing on mountains.
+               </p>
+            </li>
 
-    <ul class="team-list">
-      <li class="team-item icon-tv">
-        <img src="img/Layer_6.png" alt="" class="team-img">
-        <p class="name">Bradley Hunter</p>
-        <p class="us">Based in Chicago. I love playing tennis and loud music.</p>
-      </li>
+            <li class="team-item icon-cofe">
+               <img src="img/Layer_8.png" alt="" class="team-img">
+               <p class="name">Lucas Marsha</p>
+               <p class="us">I get my inspiration from nature and objects around me. I have a passion to colours,
+                  typography and skateboards.
+               </p>
+            </li>
 
-      <li class="team-item icon-flask">
-        <img src="img/Layer_7.png" alt="" class="team-img">
-        <p class="name">Heather Walker</p>
-        <p class="us">I'm a happy person that loves cats and climbing on mountains.
-          </p>
-      </li>
+            <li class="team-item icon-airplane">
+               <img src="img/Layer_10.png" alt="" class="team-img">
+               <p class="name">Bradley Hunter</p>
+               <p class="us">Based in Chicago. I love playing tennis and loud music.</p>
+            </li>
 
-      <li class="team-item icon-cofe">
-        <img src="img/Layer_8.png" alt="" class="team-img">
-        <p class="name">Lucas Marsha</p>
-        <p class="us">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.
-          </p>
-      </li>
+         </ul>
 
-      <li class="team-item icon-airplane">
-        <img src="img/Layer_10.png" alt="" class="team-img">
-        <p class="name">Bradley Hunter</p>
-        <p class="us">Based in Chicago. I love playing tennis and loud music.</p>
-      </li>
+         <button class="team-btn btn">See other partners</button>
 
-    </ul>
-
-    <button class="team-btn btn">See other partners</button>
-
-  </section>
-</main>
+      </section>
+   </main>
 </body>
 
 </html>
