--- a/module-10/index.html
+++ b/module-10/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="css/normalize.css">
+   
    <link rel="stylesheet" href="font/font.css">
    <link rel="stylesheet" href="css/style.css">
    <title>module-10</title>
@@ -50,7 +50,7 @@
 
       <div class="header-site__wrapper container text--center">
 
-         <span class="header-site__subtitle">Creative Template</span>
+         <p class="header-site__subtitle">Creative Template</p>
          <h1 class="header-site__title">Welcome <br> to MoGo</h1>
          <button class="header-site__btn btn">Learn more</button>
 
@@ -129,7 +129,7 @@
             <li class="team__item">
                <div class="team__card">
 
-                  <img class="team__img" srcset="img/team1.jpg 380w, img/team1@2x.jpg 760w" sizes="380px" src="img/team1.jpg" alt="team-unit">
+                  <img class="team__card-img" srcset="img/team1.jpg 380w, img/team1@2x.jpg 760w" sizes="380px" src="img/team1.jpg" alt="team-unit">
 
                   <div class="team__card-gradient animation"></div>
 
@@ -167,7 +167,7 @@
             <li class="team__item">
 
                <div class="team__card">
-                  <img class="team__img" srcset="img/team2.jpg 380w, img/team2@2x.jpg 760w" sizes="380px" src="img/team2.jpg" alt="team-unit">
+                  <img class="team__card-img" srcset="img/team2.jpg 380w, img/team2@2x.jpg 760w" sizes="380px" src="img/team2.jpg" alt="team-unit">
 
                      <div class="team__card-gradient animation"></div>
 
@@ -204,7 +204,7 @@
             <li class="team__item">
                <div class="team__card">
 
-                  <img class="team__img" srcset="img/team3.jpg 380w, img/team3@2x.jpg 760w" sizes="380px" src="img/team3.jpg" alt="team-unit">
+                  <img class="team__card-img" srcset="img/team3.jpg 380w, img/team3@2x.jpg 760w" sizes="380px" src="img/team3.jpg" alt="team-unit">
                   
                   <div class="team__card-gradient animation"></div>
 
